--- a/pokedex-vite/package.json
+++ b/pokedex-vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokedex-vite",
+  "name": "pokedex",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,17 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
-    "framer-motion": "^10.12.12",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
-    "sort-by": "^1.2.0"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
